# mlxplain

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README_vi.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: internals.md
examples/: 01_logistic_credit_risk.py  02_decision_tree_credit_risk.py  03_ensemble_credit_risk.py  04_advanced_credit_risk.py  05_anomaly_detection.py  06_kmeans_clustering.py  07_multiclass_credit_grading.py  08_model_comparison.py  09_constrained_counterfactuals.py  10_plotly_dashboards.py
examples/output/: dossier.html  ensemble_dossier.html  logistic_dossier.html  plotly_dossier.html  tree_dossier.html
mlxplain/: __init__.py  _version.py  cli.py  engine.py
mlxplain/core/: counterfactual.py  exporter.py  report.py  threshold.py
mlxplain/domains/: base.py
mlxplain/domains/credit_risk/: interpreter.py  templates.py
mlxplain/translators/: anomaly.py  base.py  clustering.py  ensemble.py  logistic.py  tree.py
mlxplain/visualizations/: charts.py  plotly_charts.py
tests/: conftest.py  snapshots.json  test_categorical.py  test_charts.py  test_cli.py  test_constraints.py  test_credit_risk.py  test_edge_cases.py  test_engine.py  test_ensemble.py  test_exporter.py  test_golden_snapshots.py  test_language.py  test_logistic.py  test_multiclass.py  test_plotly.py  test_threshold.py  test_tree.py  test_unsupervised.py
