[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlxplain"
version = "0.1.0"
description = "Translate ML model predictions into human-readable business explanations with visualizations."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "shap>=0.44.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "xgboost>=1.7",
    "lightgbm>=4.0",
]

[tool.setuptools.packages.find]
include = ["mlxplain*"]
