[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlxplain-xai"
version = "0.1.2"
description = "Translate ML model predictions into human-readable business explanations with visualizations."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "shap>=0.44.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "xgboost>=1.7",
    "lightgbm>=4.0",
]

[project.urls]
Homepage = "https://github.com/nguyen-thinh15/mlxplain"
Repository = "https://github.com/nguyen-thinh15/mlxplain"
Issues = "https://github.com/nguyen-thinh15/mlxplain/issues"

[tool.setuptools.packages.find]
include = ["mlxplain*"]

# ── Ruff ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security via Ruff)
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]  # allow assert + hardcoded passwords in tests
"examples/**/*.py" = ["E501"]  # allow long HTML lines and text strings in examples

[tool.ruff.format]
quote-style = "double"

# ── Bandit ───────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # allow assert
