[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlxplain-xai"
dynamic = ["version"]
description = "Translate ML model predictions into human-readable business explanations with visualizations."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.scripts]
mlxplain = "mlxplain.cli:main"

[project.optional-dependencies]
shap = [
    "shap>=0.44.0",
]
plotly = [
    "plotly>=5.10.0",
]
dev = [
    "pytest>=7.0",
    "xgboost>=1.7",
    "lightgbm>=4.0",
]

[project.urls]
Homepage = "https://github.com/nguyen-thinh15/mlxplain"
Repository = "https://github.com/nguyen-thinh15/mlxplain"
Issues = "https://github.com/nguyen-thinh15/mlxplain/issues"

[tool.setuptools.packages.find]
include = ["mlxplain*"]

[tool.setuptools.dynamic]
version = {attr = "mlxplain._version.__version__"}


# ── Ruff ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security via Ruff)
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]  # allow assert + hardcoded passwords in tests
"examples/**/*.py" = ["E501"]  # allow long HTML lines and text strings in examples

[tool.ruff.format]
quote-style = "double"

# ── Bandit ───────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # allow assert
